# ChangeLog for media-video/acidrip
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/acidrip/ChangeLog,v 1.4 2003/07/12 21:12:30 aliz Exp $

*acidrip-0.9 (11 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*acidrip-0.8 (22 Mar 2003)

  30 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> acidrip-0.8.ebuild:
  added dep for dev-perl/gtk-perl-glade

  22 Mar 2003; Graham Forest <vladimir@gentoo.org> acidrip-0.8.ebuild:
  Version bump

*acidrip-0.7 (05 Mar 2003)

  05 Mar 2003; Graham Forest <vladimir@gentoo.org> acidrip-0.7.ebuild:
  Initial import
