@@ -1,7 +1,7 @@
+MD5 1da1a04c17372ce58d90f0abf7175441 ChangeLog 815
+MD5 a4fdfbeee059fc4ecbd4a41cc2dfea15 acidrip-0.7.ebuild 733
+MD5 75c041dc9b8c6d2c7c9008779d0a55e5 acidrip-0.8.ebuild 759
+MD5 b5f678cd7e099a722eaab5edec43e4fd acidrip-0.9.ebuild 875
 MD5 76bbd8cce48f0a602a7e48dff81fc757 files/digest-acidrip-0.7 62
 MD5 8dc178fe99738aa4c5f0650f4c43ef87 files/digest-acidrip-0.8 62
 MD5 323cd557e9fc58678ae4dd3eb9287a01 files/digest-acidrip-0.9 62
-MD5 a4fdfbeee059fc4ecbd4a41cc2dfea15 acidrip-0.7.ebuild 733
-MD5 bfaae8b2870865c37a6fac3a685a7a95 ChangeLog 679
-MD5 75c041dc9b8c6d2c7c9008779d0a55e5 acidrip-0.8.ebuild 759
-MD5 3b25346acbcb527c37448c85bf1f4ed9 acidrip-0.9.ebuild 760
