@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/acidrip/acidrip-0.9.ebuild,v 1.1 2003/06/11 04:21:26 vladimir Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/acidrip/acidrip-0.9.ebuild,v 1.2 2003/07/30 17:58:46 mcummings Exp $
 
 inherit perl-module
 
@@ -14,10 +14,16 @@ IUSE="encode"
 
 DEPEND="dev-lang/perl
 		dev-perl/gtk-perl
-		dev-perl/gtk-perl-glade
-		media-video/lsdvd
+		dev-perl/glade-perl
+		>=media-video/lsdvd-0.9
 		media-video/mplayer
 		encode? ( >=media-sound/lame-3.92 )"
+
+src_unpack() {
+	unpack ${A}
+	cd ${S}
+	sed -i 's:system "mplayer 2:system "which mplayer 2:' ${S}/Makefile.PL
+}
 
 src_compile() {
 	perl-module_src_compile
