@@ -1,6 +1,9 @@
 # ChangeLog for media-video/acidrip
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/acidrip/ChangeLog,v 1.4 2003/07/12 21:12:30 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/acidrip/ChangeLog,v 1.5 2003/07/30 17:58:46 mcummings Exp $
+
+  30 Jul 2003; Michael Cummings <mcummings@gentoo.org> acidrip-0.9.ebuild:
+  Bug 22671 - vapier found the fix - should work again
 
 *acidrip-0.9 (11 Jun 2003)
  
